metadata-sfdx/force-app/main/default/objects/Image__c/Image__c.object-meta.xml
<CustomObject>
    <description>These are images that have been uploaded by customers or pros</description>
    <label>Image</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Images Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Images</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>