metadata-sfdx/force-app/main/default/objects/Image__c/fields/DisputeMessage__c.field-meta.xml
<CustomField>
    <fullName>DisputeMessage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispute Message</label>
    <referenceTo>DisputeMessage__c</referenceTo>
    <relationshipLabel>Images</relationshipLabel>
    <relationshipName>Images</relationshipName>
    <type>Lookup</type>
</CustomField>