metadata-sfdx/force-app/main/default/objects/Image__c/fields/URLforImage__c.field-meta.xml
<CustomField>
    <fullName>URLforImage__c</fullName>
    <label>URL for Image</label>
    <type>Url</type>
</CustomField>